# sly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build-all-win64.py  build-all-x64.py  clean-all-win64.py  shaders.json  tasks.todo  vertex.json
slycore/: CMakeLists.txt  build-win64.py
slycore/include/: sly.h
slycore/include/sly/: application.h  builder.h  convert.h  defines.h  enum.h  errors.h  gfx.h  global.h  kernel.h  macros.h  memory.h  os.h  platform.h  plugin.h  retval.h  runtime.h  static_hash.h  sys.h  types.h
slycore/include/sly/debug/: debugger.h  logconfig.h  logformatter.h  logger.h  logmessage.h  logwriter.h
slycore/include/sly/debug/enums/: loglevel.h  logtype.h
slycore/include/sly/debug/streams/: clogstream.h
slycore/include/sly/ext/: plugin.h  pluginactivator.h  pluginmanager.h  pluginsystem.h  plugintype.h
slycore/include/sly/ext/builders/: pluginmanagerbuilder.h
slycore/include/sly/gfx/: adapter.h  color.h  commandlist.h  commandqueue.h  device.h  enums.h  graphicsystem.h  indexbuffer.h  inputelement.h  light.h  managedresource.h  material.h  rect.h  rendercontext.h  renderer.h  renderinterface.h  renderstate.h  rendersystem.h  rendertarget.h  resource.h  rootsignature.h  shader.h  texture.h  vertexbuffer.h  viewport.h  window.h
slycore/include/sly/gfx/builders/: commandlistbuilder.h  commandqueuebuilder.h  devicebuilder.h  graphicsystembuilder.h  indexbufferbuilder.h  inputelementbuilder.h  rendercontextbuilder.h  rendererbuilder.h  renderstatebuilder.h  rendersystembuilder.h  rendertargetbuilder.h  resourcebuilder.h  shaderbuilder.h  texturebuilder.h  vertexbufferbuilder.h  windowbuilder.h
slycore/include/sly/gfx/enums/: blendlogicoperation.h  blendoperation.h  blendtype.h  comparefunction.h  dataformat.h  datainputclassification.h  depthwritemask.h  indexbufferstripcutvalue.h  polygoncullmode.h  polygonfillmode.h  primitivetype.h  stenciloperation.h
slycore/include/sly/io/: binaryreader.h  binarywriter.h  inputstream.h  iostream.h  istream.h  memorystream.h  ostream.h  outputstream.h  stream.h  textreader.h  textwriter.h
slycore/include/sly/math/: primatives.h  primitives.h
slycore/include/sly/mem/: allocator.h  defaultmemorymanager.h  fixedheap.h  globalheap.h  heap.h  heaptypes.h  mallocheap.h  memoryblock.h  memorymanager.h  memorysystem.h  sysheap.h
slycore/include/sly/mem/allocators/: poolallocator.h  stackallocator.h
slycore/include/sly/mem/builders/: heapbuilder.h  memorymanagerbuilder.h
slycore/include/sly/os/: file.h  filesystem.h  operatingsystem.h  os.h  systeminterface.h  window.h  windowsystem.h
slycore/include/sly/os/builders/: filesystembuilder.h  operatingsystembuilder.h  windowbuilder.h
slycore/include/sly/runtime/: activator.h  hastypeinfo.h  serializable.h  typeactivator.h  typeinfo.h  types.h
slycore/include/sly/runtime/serialization/: deserializer.h  jsonserializer.h  serializable.h  serializer.h
slycore/include/sly/runtime/serialization/binary/: _binarydeserializer.h  _binaryserializer.h  binarydeserializer.h
slycore/include/sly/runtime/serialization/json/: jsondeserializer.h  jsonserializer.h
slycore/include/sly/util/: clock.h  eventhandler.h  stopwatch.h  thread.h  time.h  timespan.h
slycore/src/: application.cpp  engine.cpp  kernel.cpp  new.cpp  platform.cpp  retval.cpp
slycore/src/debug/: logconfig.cpp  logformatter.cpp
slycore/src/gfx/: graphicsystem.cpp  rendersystem.cpp
slycore/src/io/: memorystream.cpp
slycore/src/mem/: globalheap.cpp  memorysystem.cpp
slycore/src/os/: operatingsystem.cpp
slycore/src/runtime/: activator.cpp  typeinfo.cpp
slycore/src/util/: clock.cpp  stopwatch.cpp  time.cpp  timespan.cpp
slycore/test/: CMakeLists.txt  build-win64.py
slycore/test/include/: stringtest.h
slycore/test/include/collections/: arraytest.h  linkedlisttest.h  maptest.h
slyd3d11/: CMakeLists.txt
slyd3d11/src/: register.cpp
slyd3d12/: CMakeLists.txt
slyd3d12/include/sly/: d3d12.h
slyd3d12/include/sly/d3d12/: dxh.h
slyd3d12/include/sly/d3d12/gfx/: commandlist.h  commandqueue.h  convert.h  descriptortable.h  device.h  fence.h  indexbuffer.h  managed.h  renderadapter.h  rendercontext.h  renderer.h  renderinterface.h  renderstate.h  rendersystem.h  rendertarget.h  resource.h  rootsignature.h  shader.h  texture.h  vertexbuffer.h  window.h
slyd3d12/src/: register.cpp
slyd3d12/src/d3d12/: register.cpp  renderingengine.cpp
slyd3d12/src/d3d12/gfx/: commandlist.cpp  commandqueue.cpp  convert.cpp  descriptortable.cpp  device.cpp  fence.cpp  rendercontext.cpp  renderer.cpp  renderinterface.cpp  renderstate.cpp  rendersystem.cpp  resource.cpp  rootsignature.cpp  shader.cpp  system.cpp  vertexbuffer.cpp  window.cpp
slyedit/: CMakeLists.txt  build-win64.py
slyedit/data/: scene.json  shaders.json  vertex.json
slyedit/src/: _main.cpp  main.cpp
slyengine/: CMakeLists.txt  build-win64.py
slyengine/include/: sly.h
slyengine/src/: application.cpp  controller.cpp  engine.cpp  engine.cpp_  exception.cpp  platform.cpp  signal.cpp  signalconnection.cpp  signalreceiver.cpp  task.cpp  task.cpp_
slygl4/: CMakeLists.txt  build-x64.py
slygl4/src/: register.cpp
slymacOS/: CMakeLists.txt
slymacOS/include/sly/: macOS.h  metal.h  win32.h
slymacOS/include/sly/macOS/os/: os.h  window.h
slymacOS/include/sly/metal/: dxh.h
slymacOS/include/sly/metal/gfx/: commandlist.h  commandqueue.h  convert.h  descriptortable.h  device.h  fence.h  indexbuffer.h  rendercontext.h  renderer.h  renderstate.h  rendersystem.h  rendertarget.h  resource.h  shader.h  texture.h  vertexbuffer.h
slymacOS/include/sly/win32/os/: os.h
slymacOS/src/: register.cpp
slymacOS/src/macos/os/: fileoutputstream.cpp  filesinputstream.cpp  os.cpp  window.cpp
slymacOS/src/metal/gfx/: commandlist.cpp  commandqueue.cpp  convert.cpp  descriptortable.cpp  device.cpp  fence.cpp  rendercontext.cpp  renderstate.cpp  rendersystem.cpp  resource.cpp  shader.cpp  vertexbuffer.cpp
slymacOS/src/win32/os/: filesinputstream.cpp  os.cpp  window.cpp
slywin32/: CMakeLists.txt
slywin32/src/: register.cpp
(+175 files in other folders)
